--- a/Relazione/tex/bibliografia.bib
+++ b/Relazione/tex/bibliografia.bib
@@ -271,3 +271,15 @@
   year = 1859
 }
 
+@misc{HareLynxData,
+	year = {2003},
+	month = {Nov},
+	url = {http://people.whitman.edu/~hundledr/courses/M250F03/LynxHare.txt}
+}
+
+@misc{HareLynx,
+	title = {{Predator-Prey Interaction}},
+	year = {2020},
+	month = {Apr},
+	url = {https://www2.nau.edu/lrm22/lessons/predator_prey/predator_prey.html}
+}
